GH-43380: [Java] Add support for cross jdk version testing (#43381)
### Rationale for this change

This change allows to use a different JDK version for tests than the one used to build the project.

### What changes are included in this PR?

Provided a new property `arrow.test.jdk-version` which specify a JDK version to be used by surefire/failsafe plugins instead of the version used to execute Maven.

As part of the change, also add a Java version for `TestOpens` to only be executed if Java runtime version is 16 or greater

Also add a Testing section to the Java developer documentation

### Are these changes tested?

via CI/CD

### Are there any user-facing changes?

New build property `arrow.test.jdk-version` allows developers to specify the JDK version used for tests

* GitHub Issue: #43380

Lead-authored-by: Laurent Goujon <laurent@apache.org>
Co-authored-by: Laurent Goujon <laurentgo@users.noreply.github.com>
Co-authored-by: David Li <li.davidm96@gmail.com>
Co-authored-by: Dane Pitkin <dpitkin.oss@gmail.com>
Signed-off-by: Dane Pitkin <dpitkin@apache.org>