@@ -30,6 +30,11 @@ under the License.
   <name>Arrow Memory - Core</name>
   <description>Core off-heap memory management libraries for Arrow ValueVectors.</description>
 
+  <properties>
+    <!-- List of add-opens arg line arguments for this module's tests -->
+    <surefire.add-opens.argLine>--add-reads=org.apache.arrow.memory.core=ch.qos.logback.classic --add-opens=java.base/java.lang.reflect=org.apache.arrow.memory.core --add-opens=java.base/java.nio=org.apache.arrow.memory.core,ALL-UNNAMED</surefire.add-opens.argLine>
+  </properties>
+
   <dependencies>
     <dependency>
       <groupId>org.slf4j</groupId>
@@ -85,42 +90,25 @@ under the License.
             <exclude>**/TestOpens.java</exclude>
           </excludes>
         </configuration>
+        <executions>
+          <execution>
+            <!-- TestOpens requires no add-opens JVM directives -->
+            <id>opens-tests</id>
+            <goals>
+              <goal>test</goal>
+            </goals>
+            <phase>test</phase>
+            <configuration>
+              <!-- Do not inherit the default add-opens flag and excludes -->
+              <argLine combine.self="override"></argLine>
+              <excludes combine.self="override"></excludes>
+              <includes>
+                <include>**/TestOpens.java</include>
+              </includes>
+            </configuration>
+          </execution>
+        </executions>
       </plugin>
     </plugins>
   </build>
-
-  <profiles>
-    <profile>
-      <id>opens-tests</id>
-      <!-- Run tests WITHOUT add-opens to make sure we fail-fast -->
-      <activation>
-        <jdk>[16,]</jdk>
-      </activation>
-      <build>
-        <plugins>
-          <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-surefire-plugin</artifactId>
-            <executions>
-              <execution>
-                <id>opens-tests</id>
-                <goals>
-                  <goal>test</goal>
-                </goals>
-                <phase>test</phase>
-                <configuration>
-                  <!-- Do not inherit the default add-opens flag and excludes -->
-                  <argLine combine.self="override"></argLine>
-                  <excludes combine.self="override"></excludes>
-                  <includes>
-                    <include>**/TestOpens.java</include>
-                  </includes>
-                </configuration>
-              </execution>
-            </executions>
-          </plugin>
-        </plugins>
-      </build>
-    </profile>
-  </profiles>
 </project>
